# idenfo-wikidata-delta

./: .env  .gitignore  README.md  environment.yml
Wikidata Delta/: Cleaned all_data_worldcities.xlsx  Updated CountryList.xlsx  bahrain_pep_scrapper.py  belgium_pep_scrapper.py  cities_extractor.py  delete_s3_images.py  delta_records_excel.py  delta_script.py  entity_cache.xlsx  france_pep_scrapper.py  greece_pep_scrapper.py  image_handler.py  indian_pep_scrapper.py  insertion_script.py  ireland_pep_scrapper.py  kazakhstan_pep_scrapper.py  lithuania_pep_scrapper.py  main.py  mysql_connection.py  mysql_connection_dictionary.py  nepal_pep_scrapper.py  (+15 more)
structured-scraping/: .gitignore  .mega-linter.yml  .ruff.toml  MANIFEST.in  README.md  environment.yml  pyproject.toml
structured-scraping/.github/: CODEOWNERS  copilot-instructions.md
structured-scraping/.github/workflows/: linter.yml  tests.yml
structured-scraping/examples/: wikidata_example.py
structured-scraping/src/structured_scraping/: __init__.py  cli.py  sentinel.py
structured-scraping/src/structured_scraping/sparql_utils/: __init__.py  batching.py  constants.py  core.py  errors.py  io.py  queries.py  retry.py
structured-scraping/src/structured_scraping/wikidata/: __init__.py  countries.py  filters.py  final_format.py  scrapers.py
structured-scraping/src/structured_scraping/wikidata/queries/: __init__.py  pep.py
structured-scraping/tests/: __init__.py  test_cli.py  test_integration.py
structured-scraping/tests/test_sparql_utils/: __init__.py  test_batching.py  test_core.py  test_io.py  test_package.py  test_queries.py  test_retry.py
structured-scraping/tests/test_wikidata/: __init__.py  test_countries.py  test_filters.py  test_queries.py  test_scrapers.py
(+54 files in other folders)
