[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-scraping"
version = "1.0.0"
description = "A Python package for structured web scraping"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Solomon Warsop", email = "solomon@idenfo.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "click>=8.0.0",
    "pydantic>=1.10.0",
    "SPARQLWrapper>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]
selenium = [
    "selenium>=4.0.0",
]
playwright = [
    "playwright>=1.25.0",
]

[project.urls]
Homepage = "https://github.com/Idenfo/structured-scraping"
Repository = "https://github.com/Idenfo/structured-scraping"
Issues = "https://github.com/Idenfo/structured-scraping/issues"

[project.scripts]
idenfo-struct-scrape = "structured_scraping.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["structured_scraping*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
